tests/paczka1/fuzzy1/59512537.err
Error in line 6: m64l S976 0,5
Error in line 13: m64l S947 99,0
Error in line 12: 6kJ S976 0,4
Error in line 17: S976 S371 20,0
Error in line 18: 6kJ S371 61,5
Error in line 14: m64l S371 96,8
Error in line 24: BJ4e8tW S654 87,3
Error in line 34: m64l S976 135,24
